--- a/packages/budget-ui/package.json
+++ b/packages/budget-ui/package.json
@@ -31,6 +31,16 @@
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@aws-cdk/aws-cloudfront": "^1.181.0",
+    "@aws-cdk/aws-cloudfront-origins": "^1.181.0",
+    "@aws-cdk/aws-s3-deployment": "^1.181.0",
+    "@aws-cdk/core": "^1.181.0",
+    "@types/dateformat": "^5.0.0",
+    "@types/highcharts": "^7.0.0",
+    "@types/md5": "^2.3.2",
+    "@types/react-router-dom": "^5.3.3"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -48,11 +58,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/dateformat": "^5.0.0",
-    "@types/highcharts": "^7.0.0",
-    "@types/md5": "^2.3.2",
-    "@types/react-router-dom": "^5.3.3"
   }
 }
