--- a/.github/workflows/ui-deploy.yaml
+++ b/.github/workflows/ui-deploy.yaml
@@ -34,7 +34,7 @@ jobs:
         run: npm run test
 
   deploy:
-    if: ((github.event_name == 'pull_request') && (github.event.label.name == 'deploy')) || (github.event_name == 'push' && github.ref == 'refs/heads/master')
+    if: ((github.event_name == 'pull_request') && (github.event.label.name == 'deploy ui')) || (github.event_name == 'push' && github.ref == 'refs/heads/master')
     runs-on: ubuntu-latest
     needs: [test]
     steps:
@@ -55,18 +55,19 @@ jobs:
         run: sudo npm install -g aws-cdk
 
       - name: Setup package and build
+        id: build
         env:
           API_HOST: ${{ secrets.API_HOST }}
         run: |
           npm i && npm run build
 
       - name: Deploy
+        id: deploy
         run: cdk deploy --require-approval=never
 
       - name: Create changeset if deploy failed
         if: ${{ failure() }}
-        id: change_set
-        env:
+        id: changeset
         run: cdk deploy --require-approval=never --no-execute
 
       - name: If change-set created, comment on PR
