--- a/packages/budget-ui/package.json
+++ b/packages/budget-ui/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "REACT_APP_VERSION=$npm_package_version react-scripts start",
     "build": "REACT_APP_VERSION=$npm_package_version react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "eject": "react-scripts eject"
   },
   "dependencies": {
@@ -13,16 +14,9 @@
     "@blueprintjs/table": "^4.7.9",
     "@okta/okta-auth-js": "7.1.0",
     "@okta/okta-react": "6.4",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.3",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
-    "dateformat": "^5.0.3",
+    "crypto-js": "^4.1.1",
+    "fecha": "^4.2.3",
     "highcharts": "^6.2.0",
-    "md5": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jss": "^10.9.2",
@@ -36,10 +30,18 @@
     "@aws-cdk/aws-cloudfront-origins": "^1.181.0",
     "@aws-cdk/aws-s3-deployment": "^1.181.0",
     "@aws-cdk/core": "^1.181.0",
-    "@types/dateformat": "^5.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/highcharts": "^7.0.0",
-    "@types/md5": "^2.3.2",
-    "@types/react-router-dom": "^5.3.3"
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.3",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
+    "@types/react-router-dom": "^5.3.3",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3"
   },
   "eslintConfig": {
     "extends": [
