--- a/.github/workflows/ui-deploy.yaml
+++ b/.github/workflows/ui-deploy.yaml
@@ -38,17 +38,20 @@ jobs:
     if: ((github.event_name == 'pull_request') && (github.event.label.name == 'deploy ui')) || (github.event_name == 'push' && github.ref == 'refs/heads/master')
     runs-on: ubuntu-latest
     needs: [test]
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v1-node16
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+          role-duration-seconds: 900
           aws-region: ${{ env.AWS_REGION }}
-
+           
       - name: Update NPM
         run: sudo npm install -g npm@8.1.0
 
