--- a/.github/workflows/ui-deploy.yaml
+++ b/.github/workflows/ui-deploy.yaml
@@ -80,7 +80,7 @@ jobs:
       - name: Deploy
         id: deploy
         working-directory: packages/budget-ui
-        run: cdk bootstrap && cdk deploy --require-approval=never
+        run: cdk deploy --require-approval=never
 
       - name: Create changeset if deploy failed
         if: steps.deploy.conclusion == 'failure'
