--- a/.github/workflows/ui-deploy.yaml
+++ b/.github/workflows/ui-deploy.yaml
@@ -60,11 +60,11 @@ jobs:
 
       - name: Get current date
         id: date
-        run: echo "{date}={$(date +'%Y-%m-%d')}" >> $GITHUB_OUTPUT
+        run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
 
       - name: Get current time
         id: time
-        run: echo "{time}={$(date +'%l:%M%P')}" >> $GITHUB_OUTPUT
+        run: echo "time=$(date +'%l:%M%P')" >> $GITHUB_OUTPUT
 
       - name: Setup package and build
         id: build
@@ -83,13 +83,13 @@ jobs:
         run: cdk deploy --require-approval=never
 
       - name: Create changeset if deploy failed
-        if: steps.deploy.conclusion == 'failure'
+        if: ${{ failure() && steps.deploy.conclusion == 'failure' }}
         id: changeset
         working-directory: packages/budget-ui
         run: cdk deploy --require-approval=never --no-execute
 
       - name: If change-set created, comment on PR
-        if: steps.changeset.conclusion == 'success'
+        if: ${{ success() && steps.changeset.conclusion == 'success' }}
         uses: peter-evans/create-or-update-comment@v1
         with:
           issue-number: ${{ github.event.pull_request.number }}
