--- a/.github/workflows/ui-deploy.yaml
+++ b/.github/workflows/ui-deploy.yaml
@@ -64,7 +64,7 @@ jobs:
 
       - name: Get current time
         id: time
-        run: echo "time=$(date +'%l:%M%P')" >> $GITHUB_OUTPUT
+        run: echo "time=$(date +'%I:%M%P')" >> $GITHUB_OUTPUT
 
       - name: Setup package and build
         id: build
