--- a/packages/budget-ui/package.json
+++ b/packages/budget-ui/package.json
@@ -30,6 +30,12 @@
     "@aws-cdk/aws-cloudfront-origins": "^1.181.0",
     "@aws-cdk/aws-s3-deployment": "^1.181.0",
     "@aws-cdk/core": "^1.181.0",
+    "@semantic-release/changelog": "^6.0.0",
+    "@semantic-release/commit-analyzer": "^9.0.1",
+    "@semantic-release/git": "^10.0.0",
+    "@semantic-release/github": "^8.0.1",
+    "@semantic-release/npm": "^8.0.0",
+    "@semantic-release/release-notes-generator": "^10.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -40,7 +46,10 @@
     "@types/react-dom": "^18.0.8",
     "@types/react-router-dom": "^5.3.3",
     "jest": "^29.3.1",
-    "ts-jest": "^29.0.3"
+    "semantic-release": "^18.0.0",
+    "semantic-release-monorepo": "^7.0.5",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1"
   },
   "eslintConfig": {
     "extends": [
