--- a/.github/workflows/ui-deploy.yaml
+++ b/.github/workflows/ui-deploy.yaml
@@ -77,6 +77,15 @@ jobs:
         run: |
           npm i && npm run build
 
+      - name: Version and publish package
+        if: github.event_name == 'push'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        working-directory: packages/ecomm-quote-ui
+        run: npx semantic-release -e semantic-release-monorepo
+
       - name: Deploy
         id: deploy
         working-directory: packages/budget-ui
