--- a/.github/workflows/ui-deploy.yaml
+++ b/.github/workflows/ui-deploy.yaml
@@ -80,10 +80,12 @@ jobs:
       - name: Version and publish package
         if: github.event_name == 'push'
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        working-directory: packages/ecomm-quote-ui
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GIT_AUTHOR_NAME: Tom Mollerus
+          GIT_AUTHOR_EMAIL: tom@mollerus.net
+          GIT_COMMITTER_NAME: Tom Mollerus
+          GIT_COMMITTER_EMAIL: tom@mollerus.net
+        working-directory: packages/budget-ui
         run: npx semantic-release -e semantic-release-monorepo
 
       - name: Deploy
