fix: restored semantic-release/npm

--- a/packages/budget-ui/.releaserc.json
+++ b/packages/budget-ui/.releaserc.json
@@ -45,6 +45,12 @@
       }
     ],
     [
+      "@semantic-release/npm",
+      {
+        "pkgRoot": "."
+      }
+    ],
+    [
       "@semantic-release/git",
       {
         "assets": ["package.json", "package-lock.json", "CHANGELOG.md"],
