--- a/.github/workflows/ui-deploy.yaml
+++ b/.github/workflows/ui-deploy.yaml
@@ -80,7 +80,7 @@ jobs:
       - name: Version and publish package
         if: github.event_name == 'push'
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIT_AUTHOR_NAME: Tom Mollerus
           GIT_AUTHOR_EMAIL: tom@mollerus.net
           GIT_COMMITTER_NAME: Tom Mollerus
