fix: changed content permission to write

--- a/.github/workflows/ui-deploy.yaml
+++ b/.github/workflows/ui-deploy.yaml
@@ -40,7 +40,7 @@ jobs:
     needs: [test]
     permissions:
       id-token: write
-      contents: read
+      contents: write
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
