--- a/packages/budget-ui/package.json
+++ b/packages/budget-ui/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "REACT_APP_VERSION=$npm_package_version react-scripts start",
     "build": "REACT_APP_VERSION=$npm_package_version react-scripts build",
-    "test": "jest",
+    "test": "jest --coverage",
     "test:watch": "jest --watch",
     "eject": "react-scripts eject"
   },
