--- a/packages/budget-ui/package.json
+++ b/packages/budget-ui/package.json
@@ -7,7 +7,8 @@
     "build": "REACT_APP_VERSION=$npm_package_version react-scripts build",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@blueprintjs/core": "^4.12.0",
@@ -30,6 +31,7 @@
     "@aws-cdk/aws-cloudfront-origins": "^1.181.0",
     "@aws-cdk/aws-s3-deployment": "^1.181.0",
     "@aws-cdk/core": "^1.181.0",
+    "@commitlint/cli": "^17.3.0",
     "@semantic-release/changelog": "^6.0.0",
     "@semantic-release/commit-analyzer": "^9.0.1",
     "@semantic-release/git": "^10.0.0",
@@ -45,6 +47,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@types/react-router-dom": "^5.3.3",
+    "husky": "^8.0.2",
     "jest": "^29.3.1",
     "semantic-release": "^18.0.0",
     "semantic-release-monorepo": "^7.0.5",
@@ -58,6 +61,12 @@
     ],
     "rules": {
       "react-hooks/exhaustive-deps": "warn"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "npx --no -- commitlint --edit ${1}",
+      "pre-commit": "npm test"
     }
   },
   "browserslist": {
