--- a/packages/budget-api/package.json
+++ b/packages/budget-api/package.json
@@ -12,6 +12,9 @@
     "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "@aws-cdk/aws-apigateway": "^1.182.0",
+    "@aws-cdk/aws-lambda": "^1.182.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.182.0",
     "@aws-cdk/core": "^1.181.0",
     "@semantic-release/changelog": "^6.0.0",
     "@semantic-release/commit-analyzer": "^9.0.1",
@@ -19,6 +22,7 @@
     "@semantic-release/github": "^8.0.1",
     "@semantic-release/npm": "^8.0.0",
     "@semantic-release/release-notes-generator": "^10.0.2",
+    "@types/aws-lambda": "^8.10.109",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
     "jest": "^29.3.1",
