--- a/packages/budget-api/package.json
+++ b/packages/budget-api/package.json
@@ -13,6 +13,8 @@
   },
   "devDependencies": {
     "@aws-cdk/aws-apigateway": "^1.182.0",
+    "@aws-cdk/aws-apigatewayv2": "^1.182.0",
+    "@aws-cdk/aws-apigatewayv2-integrations": "^1.182.0",
     "@aws-cdk/aws-lambda": "^1.182.0",
     "@aws-cdk/aws-lambda-nodejs": "^1.182.0",
     "@aws-cdk/core": "^1.181.0",
