--- a/packages/budget-api/package.json
+++ b/packages/budget-api/package.json
@@ -8,8 +8,11 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.229.0",
     "@okta/okta-auth-js": "7.1.0",
+    "aws-sdk": "^2.1273.0",
     "node-fetch": "^3.3.0",
+    "pg": "^8.8.0",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
@@ -18,6 +21,7 @@
     "@aws-cdk/aws-apigatewayv2-integrations": "^1.182.0",
     "@aws-cdk/aws-lambda": "^1.182.0",
     "@aws-cdk/aws-lambda-nodejs": "^1.182.0",
+    "@aws-cdk/aws-secretsmanager": "^1.182.0",
     "@aws-cdk/core": "^1.181.0",
     "@semantic-release/changelog": "^6.0.0",
     "@semantic-release/commit-analyzer": "^9.0.1",
@@ -28,6 +32,7 @@
     "@types/aws-lambda": "^8.10.109",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
+    "@types/pg": "^8.6.5",
     "jest": "^29.3.1",
     "semantic-release": "^18.0.0",
     "semantic-release-monorepo": "^7.0.5",
