--- a/packages/budget-api/package.json
+++ b/packages/budget-api/package.json
@@ -21,6 +21,7 @@
     "@aws-cdk/aws-ec2": "^1.182.0",
     "@aws-cdk/aws-lambda": "^1.182.0",
     "@aws-cdk/aws-lambda-nodejs": "^1.182.0",
+    "@aws-cdk/aws-rds": "^1.182.0",
     "@aws-cdk/aws-secretsmanager": "^1.182.0",
     "@aws-cdk/core": "^1.181.0",
     "@semantic-release/changelog": "^6.0.0",
