--- a/packages/budget-api/package.json
+++ b/packages/budget-api/package.json
@@ -12,6 +12,7 @@
     "aws-sdk": "^2.1273.0",
     "node-fetch": "^3.3.0",
     "pg": "^8.8.0",
+    "postgres-migrations": "^5.3.0",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
