--- a/.github/workflows/api-deploy.yaml
+++ b/.github/workflows/api-deploy.yaml
@@ -72,7 +72,7 @@ jobs:
           GIT_AUTHOR_EMAIL: tom@mollerus.net
           GIT_COMMITTER_NAME: Tom Mollerus
           GIT_COMMITTER_EMAIL: tom@mollerus.net
-        working-directory: packages/budget-ui
+        working-directory: packages/budget-api
         run: npx semantic-release -e semantic-release-monorepo
 
       - name: Setup package and build
