fix: added pathing filters to actions so they don't run unnecessarily

--- a/.github/workflows/api-deploy.yaml
+++ b/.github/workflows/api-deploy.yaml
@@ -4,9 +4,13 @@ on:
   push:
     branches:
       - "master"
+    paths:
+      - "packages/budget-api/**"
   pull_request:
     types:
       - labeled
+    paths:
+      - "packages/budget-api/**"
 
 env:
   AWS_REGION: us-east-1
