--- a/packages/budget-api/package.json
+++ b/packages/budget-api/package.json
@@ -15,15 +15,15 @@
     "typescript": "^4.8.4"
   },
   "devDependencies": {
-    "@aws-cdk/aws-apigateway": "^1.182.0",
-    "@aws-cdk/aws-apigatewayv2": "^1.182.0",
-    "@aws-cdk/aws-apigatewayv2-integrations": "^1.182.0",
-    "@aws-cdk/aws-ec2": "^1.182.0",
-    "@aws-cdk/aws-lambda": "^1.182.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.182.0",
-    "@aws-cdk/aws-rds": "^1.182.0",
-    "@aws-cdk/aws-secretsmanager": "^1.182.0",
-    "@aws-cdk/core": "^1.181.0",
+    "@aws-cdk/aws-apigatewayv2": "1.182.0",
+    "@aws-cdk/aws-apigatewayv2-authorizers": "1.182.0",
+    "@aws-cdk/aws-apigatewayv2-integrations": "1.182.0",
+    "@aws-cdk/aws-ec2": "1.182.0",
+    "@aws-cdk/aws-lambda": "1.182.0",
+    "@aws-cdk/aws-lambda-nodejs": "1.182.0",
+    "@aws-cdk/aws-rds": "1.182.0",
+    "@aws-cdk/aws-secretsmanager": "1.182.0",
+    "@aws-cdk/core": "1.182.0",
     "@semantic-release/changelog": "^6.0.0",
     "@semantic-release/commit-analyzer": "^9.0.1",
     "@semantic-release/git": "^10.0.0",
