--- a/packages/budget-api/package.json
+++ b/packages/budget-api/package.json
@@ -18,6 +18,7 @@
     "@aws-cdk/aws-apigatewayv2": "1.182.0",
     "@aws-cdk/aws-apigatewayv2-authorizers": "1.182.0",
     "@aws-cdk/aws-apigatewayv2-integrations": "1.182.0",
+    "@aws-cdk/aws-certificatemanager": "1.182.0",
     "@aws-cdk/aws-ec2": "1.182.0",
     "@aws-cdk/aws-lambda": "1.182.0",
     "@aws-cdk/aws-lambda-nodejs": "1.182.0",
