--- a/packages/budget-api/package.json
+++ b/packages/budget-api/package.json
@@ -12,7 +12,8 @@
     "aws-sdk": "^2.1273.0",
     "node-fetch": "^3.3.0",
     "pg": "^8.8.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@aws-cdk/aws-apigatewayv2": "1.182.0",
@@ -35,6 +36,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
     "@types/pg": "^8.6.5",
+    "@types/uuid": "^9.0.0",
     "jest": "^29.3.1",
     "semantic-release": "^18.0.0",
     "semantic-release-monorepo": "^7.0.5",
