--- a/packages/budget-api/package.json
+++ b/packages/budget-api/package.json
@@ -21,6 +21,8 @@
     "@aws-cdk/aws-apigatewayv2-integrations": "1.182.0",
     "@aws-cdk/aws-certificatemanager": "1.182.0",
     "@aws-cdk/aws-ec2": "1.182.0",
+    "@aws-cdk/aws-elasticache":  "1.182.0",
+    "@aws-cdk/aws-iam":  "1.182.0",
     "@aws-cdk/aws-lambda": "1.182.0",
     "@aws-cdk/aws-lambda-nodejs": "1.182.0",
     "@aws-cdk/aws-rds": "1.182.0",
