--- a/packages/budget-api/package.json
+++ b/packages/budget-api/package.json
@@ -12,6 +12,7 @@
     "aws-sdk": "^2.1273.0",
     "node-fetch": "^3.3.0",
     "pg": "^8.8.0",
+    "redis": "^4.5.1",
     "typescript": "^4.8.4",
     "uuid": "^9.0.0"
   },
@@ -21,8 +22,8 @@
     "@aws-cdk/aws-apigatewayv2-integrations": "1.182.0",
     "@aws-cdk/aws-certificatemanager": "1.182.0",
     "@aws-cdk/aws-ec2": "1.182.0",
-    "@aws-cdk/aws-elasticache":  "1.182.0",
-    "@aws-cdk/aws-iam":  "1.182.0",
+    "@aws-cdk/aws-elasticache": "1.182.0",
+    "@aws-cdk/aws-iam": "1.182.0",
     "@aws-cdk/aws-lambda": "1.182.0",
     "@aws-cdk/aws-lambda-nodejs": "1.182.0",
     "@aws-cdk/aws-rds": "1.182.0",
