--- a/packages/budget-ui/package.json
+++ b/packages/budget-ui/package.json
@@ -46,6 +46,7 @@
     "@types/react-dom": "^18.0.8",
     "@types/react-router-dom": "^5.3.3",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "semantic-release": "^18.0.0",
     "semantic-release-monorepo": "^7.0.5",
     "ts-jest": "^29.0.3",
