--- a/.github/workflows/api-deploy.yaml
+++ b/.github/workflows/api-deploy.yaml
@@ -3,14 +3,14 @@ name: Deploy API
 on:
   push:
     branches:
-      - "master"
+      - 'master'
     paths:
-      - "packages/budget-api/**"
+      - 'packages/budget-api/**'
   pull_request:
     types:
       - labeled
     paths:
-      - "packages/budget-api/**"
+      - 'packages/budget-api/**'
 
 env:
   AWS_REGION: us-east-1
@@ -20,14 +20,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Use Node.js 16.15.0
-        uses: actions/setup-node@v3
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
         with:
-          node-version: 16.15.0
+          node-version: 20.14.0
 
       - name: Install
         shell: bash
@@ -50,14 +50,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1-node16
+        uses: aws-actions/configure-aws-credentials@v1-node20
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           role-duration-seconds: 900
           aws-region: ${{ env.AWS_REGION }}
-           
-      - name: Update NPM
-        run: sudo npm install -g npm@8.1.0
 
       - name: Install CDK
         run: sudo npm install -g aws-cdk
