--- a/packages/budget-ui/package.json
+++ b/packages/budget-ui/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^4.12.0",
+    "@blueprintjs/select": "^4.9.24",
     "@okta/okta-auth-js": "7.1.0",
     "@okta/okta-react": "6.9.0",
     "crypto-js": "^4.2.0",
