--- a/packages/budget-ui/package.json
+++ b/packages/budget-ui/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^4.12.0",
+    "@blueprintjs/select": "^4.9.24",
     "@okta/okta-auth-js": "7.1.0",
     "@okta/okta-react": "6.9.0",
     "crypto-js": "^4.2.0",
     "fecha": "^4.2.3",
-    "highcharts": "^9.0.0",
+    "highcharts": "^9.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jss": "^10.9.2",
