--- a/packages/budget-api/package.json
+++ b/packages/budget-api/package.json
@@ -29,6 +29,8 @@
     "@types/pg": "^8.6.5",
     "@types/uuid": "^9.0.0",
     "aws-cdk-lib": "^2.236.0",
+    "constructs": "^10.0.0",
+    "esbuild": "^0.18.20",
     "jest": "^29.3.1",
     "semantic-release": "^18.0.0",
     "semantic-release-monorepo": "^7.0.5",
