--- a/packages/budget-api/tsconfig.json
+++ b/packages/budget-api/tsconfig.json
@@ -13,5 +13,6 @@
     "forceConsistentCasingInFileNames": true, 
     "isolatedModules": true
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "include": ["src/**/*.ts", "test/**/*.ts"]
 }
