--- a/packages/budget-api/package.json
+++ b/packages/budget-api/package.json
@@ -8,8 +8,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.386.0",
     "@okta/okta-auth-js": "7.14.0",
-    "aws-sdk": "^2.1644.0",
     "node-fetch": "^3.3.0",
     "pg": "^8.8.0",
     "redis": "^4.5.1",
