--- a/packages/budget-api/package.json
+++ b/packages/budget-api/package.json
@@ -8,8 +8,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.386.0",
     "@okta/okta-auth-js": "7.14.0",
-    "aws-sdk": "^2.1644.0",
     "node-fetch": "^3.3.0",
     "pg": "^8.8.0",
     "redis": "^4.5.1",
@@ -17,18 +17,6 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@aws-cdk/aws-apigatewayv2": "1.182.0",
-    "@aws-cdk/aws-apigatewayv2-authorizers": "1.182.0",
-    "@aws-cdk/aws-apigatewayv2-integrations": "1.182.0",
-    "@aws-cdk/aws-certificatemanager": "1.182.0",
-    "@aws-cdk/aws-ec2": "1.182.0",
-    "@aws-cdk/aws-elasticache": "1.182.0",
-    "@aws-cdk/aws-iam": "1.182.0",
-    "@aws-cdk/aws-lambda": "1.182.0",
-    "@aws-cdk/aws-lambda-nodejs": "1.182.0",
-    "@aws-cdk/aws-rds": "1.182.0",
-    "@aws-cdk/aws-secretsmanager": "1.182.0",
-    "@aws-cdk/core": "1.182.0",
     "@semantic-release/changelog": "^6.0.0",
     "@semantic-release/commit-analyzer": "^9.0.1",
     "@semantic-release/git": "^10.0.0",
@@ -40,6 +28,9 @@
     "@types/node": "^16.18.3",
     "@types/pg": "^8.6.5",
     "@types/uuid": "^9.0.0",
+    "aws-cdk-lib": "^2.236.0",
+    "constructs": "^10.0.0",
+    "esbuild": "^0.18.20",
     "jest": "^29.3.1",
     "semantic-release": "^18.0.0",
     "semantic-release-monorepo": "^7.0.5",
