--- a/packages/budget-api/tsconfig.json
+++ b/packages/budget-api/tsconfig.json
@@ -11,7 +11,8 @@
     "esModuleInterop": true, 
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true, 
-    "isolatedModules": true, 
+    "isolatedModules": true
   },
-  "exclude": ["node_modules", "**/*.test.ts"]
+  "exclude": ["node_modules"],
+  "include": ["src/**/*.ts", "test/**/*.ts"]
 }
