--- a/packages/budget-ui/package.json
+++ b/packages/budget-ui/package.json
@@ -26,10 +26,6 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@aws-cdk/aws-cloudfront": "^1.181.0",
-    "@aws-cdk/aws-cloudfront-origins": "^1.181.0",
-    "@aws-cdk/aws-s3-deployment": "^1.181.0",
-    "@aws-cdk/core": "^1.181.0",
     "@semantic-release/changelog": "^6.0.0",
     "@semantic-release/commit-analyzer": "^9.0.1",
     "@semantic-release/git": "^10.0.0",
@@ -45,6 +41,8 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@types/react-router-dom": "^5.3.3",
+    "aws-cdk-lib": "^2.0.0",
+    "constructs": "^10.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "semantic-release": "^18.0.0",
